--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-kontaktio": "^4.1.0"
+    "react-native-contacts": "^7.0.6",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
